scripts/fault/manifests/cascading-failure-product-catalog-2.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: productcatalogservice
  namespace: default
spec:
  hosts:
    - productcatalogservice
  http:
    - match:
      - sourceLabels:
          app: checkoutservice
      route:
        - destination:
            host: productcatalogservice
            subset: latency
      timeout: 12s      
    - match:
      - sourceLabels:
          app: recommendationservice
      route:
        - destination:
            host: productcatalogservice
            subset: latency
      timeout: 12s    
    - match:
      - sourceLabels:
          app: frontend
      route:
        - destination:
            host: productcatalogservice
            subset: v1            
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: productcatalogservice
  namespace: default
spec:
  host: productcatalogservice
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: latency
      name: latency
