scripts/fault/manifests/currency-service-risky.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice-risky-version
spec:
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      labels:
        app: currencyservice
        version: risky
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: nginx:stable-alpine
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: currencyservice
  namespace: default
spec:
  hosts:
    - currencyservice.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: currencyservice.default.svc.cluster.local
            subset: safe
          weight: 85
        - destination:
            host: currencyservice.default.svc.cluster.local
            subset: risky
          weight: 15
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: currencyservice
  namespace: default
spec:
  host: currencyservice.default.svc.cluster.local
  subsets:
    - labels:
        version: safe
      name: safe
    - labels:
        version: risky
      name: risky
